--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
+    "mitt": "^2.1.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
